@@ -1,6 +1,6 @@
 * Multiple dive tanks
 * Display related info from other tables in dive details (i.e. shops, trips etc.)
-* Display of overview and details pages for country, city, shop, trip
+* Display of overview and details pages for country, city, trip
 * Extra profile charts (e.g. temperature, gas changes, Asc-/Descend rate, tank pressures, ppO2 etc.)
 * Support web links in all comments [url][/url]
 * Extra dive statistics (e.g. number of twin, single and stage dives)
@@ -8,5 +8,7 @@
 * Show which equipment items are due for service and/or O2 clean
 * Show the user-defined fields
 * Protected access to overview and details of buddies
+* Get a better RTF to HTML converter to fully support the RTF markup Diving Log can do,
+  or alternatively, add in support for BBCodes.
 
 
